# aide

./: main.py  pyproject.toml  test.py
src/base/components/ui/: chat.py
src/base/llm/: provider_agnostic.py
src/ui/linkedin/: display.py
