[project]
name = "aide"
version = "0.1.0"
description = "The AI Aide, Suite of personalized AI Assistants"
readme = "README.md"
authors = [
    { name = "Vishv Patel", email = "139690991+vpsir@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.9.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.52.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
]

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | build
        | dist
    )/
'''
